@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2015-11-24
  * Changed Wing::Role::Result::Parent to allow undef to be set on a relationship that is not required or unique.
+ * Added on_success to options and behavior for all() and search() in objectListManager in wing.angular.js.
 
 2015-11-20
  * Added fetch_options() to wing.angular.js objectListManager.
